--- a/index.html
+++ b/index.html
@@ -7,40 +7,229 @@
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/496f5a0709.js" crossorigin="anonymous"></script>
   <title>Penguin Fashion</title>
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="images/logo.png" alt="logo">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#product">Product</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contactus">Contact us</a>
-            </li>
-          </ul>
+  <section style="background: #FFFBF0;">
+    <header class="container">
+      <!--▼ Navigation ▼-->
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="images/logo.png" alt="logo" width="291.11px" height="39.27px" class="d-inline-block align-top">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto m-5">
+              <li class="nav-item">
+                <a class="nav-link " href="#home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="#product">Product</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="#about">About us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="#contactus">Contact us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!--▲ Navigation ▲-->
+      <!-- ▼ Banner Section Start ▼ -->
+      <div class="container-fluid overflow-hidden">
+        <div class="row gx-5 align-items-center">
+          <div class="col-sm-6 p-3">
+            <div>
+              <h1 style="color: #FABE4C;" class="big-heading">Be the Penguins</h1>
+              <h1 class="big-heading">of Winter</h1>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
+                  alt=""> BUY NOW</button>
+            </div>
+          </div>
+          <div class="col-sm-6 p-3">
+            <div><img src="images/banner-image.png" class="img-fluid" alt="banner-image"></div>
+          </div>
         </div>
       </div>
-    </nav>
-  </header>
+      <!-- ▲ Banner Section End ▲ -->
+    </header>
+  </section>
 
+
+  <main>
+    <!--▼ Woman Jacket Section Start ▼-->
+    <section class="container mt-5">
+      <h1 class="big-heading">Woman Jacket</h1>
+      <div class="row row-cols-1 row-cols-md-3 g-4 align-items-center">
+        <!-- Yellow Coat Jacket -->
+        <div class="col">
+          <div class="card h-100 shadow panda-card p-3">
+            <img src="images/woman-jacket/woman-jacket-1.png" class="card-img-top p-5 panda-card-img"
+              alt="woman-jacket-1">
+            <div class="card-body">
+              <h1 class="card-title">Yellow Coat Jacket</h1>
+              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather days.</p>
+            </div>
+            <div class="card-footer penguin-card-footer d-flex justify-content-between">
+              <h2>$234</h2>
+              <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
+                  alt=""> BUY NOW</button>
+            </div>
+          </div>
+        </div>
+        <!-- Ladies Jacket -->
+        <div class="col">
+          <div class="card h-100 shadow panda-card p-3">
+            <img src="images/woman-jacket/woman-jacket-2.png" class="card-img-top p-5 panda-card-img" height=" alt="
+              woman-jacket-2">
+            <div class="card-body">
+              <h1 class="card-title">Ladies Jacket</h1>
+              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather days.</p>
+            </div>
+            <div class="card-footer penguin-card-footer d-flex justify-content-between">
+              <h2>$234</h2>
+              <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
+                  alt=""> BUY NOW</button>
+            </div>
+          </div>
+        </div>
+        <!-- Woman Leather Jacket -->
+        <div class="col">
+          <div class="card h-100 shadow panda-card p-3">
+            <img src="images/woman-jacket/woman-jacket-3.png" class="card-img-top p-5 panda-card-img" height=""
+              alt="woman-jacket-3">
+            <div class="card-body">
+              <h1 class="card-title">Woman Leather Jacket</h1>
+              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather days.</p>
+            </div>
+            <div class="card-footer penguin-card-footer d-flex justify-content-between align-items-center">
+              <h2>$234</h2>
+              <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
+                  alt=""> BUY NOW</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--▲ Woman Jacket Section end ▲-->
+
+
+    <!--▼ Man Jacket Section start ▼-->
+    <section class="container mt-5">
+      <h1 class="big-heading">Man Jacket</h1>
+      <div class="row row-cols-1 row-cols-md-3 g-4 align-items-center">
+        <!-- Yellow Coat Jacket -->
+        <div class="col">
+          <div class="card h-100 shadow panda-card p-3">
+            <img src="images/man-jacket/man-jacket-1.png" class="card-img-top p-5 panda-card-img" alt="woman-jacket-1">
+            <div class="card-body">
+              <h1 class="card-title">Snowboard Jacket Mens</h1>
+              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather days.</p>
+            </div>
+            <div class="card-footer penguin-card-footer d-flex justify-content-between">
+              <h2>$234</h2>
+              <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
+                  alt=""> BUY NOW</button>
+            </div>
+          </div>
+        </div>
+        <!-- Ladies Jacket -->
+        <div class="col">
+          <div class="card h-100 shadow panda-card p-3">
+            <img src="images/man-jacket/man-jacket-2.png" class="card-img-top p-5 panda-card-img" height=" alt="
+              woman-jacket-2">
+            <div class="card-body">
+              <h1 class="card-title">Man Leather Jackets</h1>
+              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather days.</p>
+            </div>
+            <div class="card-footer penguin-card-footer d-flex justify-content-between">
+              <h2>$234</h2>
+              <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
+                  alt=""> BUY NOW</button>
+            </div>
+          </div>
+        </div>
+        <!-- Woman Leather Jacket -->
+        <div class="col">
+          <div class="card h-100 shadow panda-card p-3">
+            <img src="images/man-jacket/man-jacket-3.png" class="card-img-top p-5 panda-card-img" height=""
+              alt="woman-jacket-3">
+            <div class="card-body">
+              <h1 class="card-title">Man Casual Jackets</h1>
+              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather days.</p>
+            </div>
+            <div class="card-footer penguin-card-footer d-flex justify-content-between align-items-center">
+              <h2>$234</h2>
+              <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
+                  alt=""> BUY NOW</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--▲ Man Jacket Section end ▲-->
+    <!--▼ services Section Start ▼-->
+    <section class="container mt-5">
+      
+    </section>
+    <!--▲ services Section end ▲-->
+
+    <!-- ▼▼▼ contac us Part start ▼▼▼ -->
+    <section class="container text-center shadow rounded p-5 contact-us" id="contactus">
+      <h1>Contact Us</h1>
+      <hr>
+      <div class="row d-flex align-items-center">
+        <div class="col-md-6">
+          <img src="images/logo.png" alt="logo" width="291.11px" height="39.27px">
+          <p class="mt-3">The Penguin Fashion story began in 1969 as a single fashion store in the UK. From there, we’ve grown to become a leading fast-fashion brand, with 519 in the UK and Ireland at at 30 March 2019. Our transactional website penguin-fashion.com now ships to around 66 countries world-wide generating around 20% of sales.</p>
+          <address>
+            <p class="address browser,support,triablo">
+              <i class="fa fa-map-marker"></i>
+              UK, Manchester, 14th street
+            </p>
+            <a href="mailto:yourmail@gmail.com" class="mail">
+              <i class="fa fa-envelope"></i>
+              contactus@penguin-fashion.com
+            </a>
+          </address>
+        </div>
+        <div class="col-md-6 p-5">
+          <form action="#">
+            <div class="mb-3">
+              <input type="text" name="name" id="name" class="form-control" placeholder="Your Name">
+            </div>
+            <div class="mb-3">
+              <input type="email" name="email" id="email" class="form-control" placeholder="E-mail">
+            </div>
+            <div class="mb-3">
+              <textarea name="message" id="message" cols="30" rows="10" class="form-control"
+              placeholder="Your message here"></textarea>
+            </div>
+            <button type="submit" class="btn btn-lg buy-now-button">Send</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- ▲▲▲ contac us Part End ▲▲▲ -->
+
+    <footer class="text-center mt-5">
+      <p>&copy; Penguin Fashion, All rights reserved Programming Hero</p>
+    </footer>
+
+  </main>
 
 
 
