--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- favicon -->
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <!--▼ Google Font ▼-->
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+  <!--▲ Google Font ▲-->
+  <!-- Font Awsome -->
   <script src="https://kit.fontawesome.com/496f5a0709.js" crossorigin="anonymous"></script>
   <title>Penguin Fashion</title>
 </head>
-
 <body>
-  <section style="background: #FFFBF0;">
+  <section style="background: #FFFBF0;" class="pb-5">
     <header class="container">
       <!--▼ Navigation ▼-->
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="#" >
             <img src="images/logo.png" alt="logo" width="291.11px" height="39.27px" class="d-inline-block align-top">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -48,18 +51,18 @@
       </nav>
       <!--▲ Navigation ▲-->
       <!-- ▼ Banner Section Start ▼ -->
-      <div class="container-fluid overflow-hidden">
+      <div class="mt-5 container-fluid overflow-hidden">
         <div class="row gx-5 align-items-center">
-          <div class="col-sm-6 p-3">
+          <div class="col-md-6 mb-5">
             <div>
               <h1 style="color: #FABE4C;" class="big-heading">Be the Penguins</h1>
               <h1 class="big-heading">of Winter</h1>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <p>Dress up your casual attire with jackets and blazers that come in a variety of styles.</p>
               <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
                   alt=""> BUY NOW</button>
             </div>
           </div>
-          <div class="col-sm-6 p-3">
+          <div class="col-md-6">
             <div><img src="images/banner-image.png" class="img-fluid" alt="banner-image"></div>
           </div>
         </div>
@@ -71,20 +74,21 @@
 
   <main>
     <!--▼ Woman Jacket Section Start ▼-->
-    <section class="container mt-5">
+    <section class="container mt-5" id="product">
       <h1 class="big-heading">Woman Jacket</h1>
       <div class="row row-cols-1 row-cols-md-3 g-4 align-items-center">
         <!-- Yellow Coat Jacket -->
         <div class="col">
           <div class="card h-100 shadow panda-card p-3">
-            <img src="images/woman-jacket/woman-jacket-1.png" class="card-img-top p-5 panda-card-img"
+            <img src="images/woman-jacket/woman-jacket-1.png" class="card-img-top p-5 panda-card-img img-fluid"
               alt="woman-jacket-1">
             <div class="card-body">
               <h1 class="card-title">Yellow Coat Jacket</h1>
-              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather days.</p>
+              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather
+                days.</p>
             </div>
             <div class="card-footer penguin-card-footer d-flex justify-content-between">
-              <h2>$234</h2>
+              <h1>$234</h1>
               <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
                   alt=""> BUY NOW</button>
             </div>
@@ -93,14 +97,15 @@
         <!-- Ladies Jacket -->
         <div class="col">
           <div class="card h-100 shadow panda-card p-3">
-            <img src="images/woman-jacket/woman-jacket-2.png" class="card-img-top p-5 panda-card-img" height=" alt="
-              woman-jacket-2">
+            <img src="images/woman-jacket/woman-jacket-2.png" class="card-img-top p-5 panda-card-img img-fluid"
+              height=" alt=" woman-jacket-2">
             <div class="card-body">
               <h1 class="card-title">Ladies Jacket</h1>
-              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather days.</p>
+              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather
+                days.</p>
             </div>
             <div class="card-footer penguin-card-footer d-flex justify-content-between">
-              <h2>$234</h2>
+              <h1>$234</h1>
               <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
                   alt=""> BUY NOW</button>
             </div>
@@ -109,14 +114,15 @@
         <!-- Woman Leather Jacket -->
         <div class="col">
           <div class="card h-100 shadow panda-card p-3">
-            <img src="images/woman-jacket/woman-jacket-3.png" class="card-img-top p-5 panda-card-img" height=""
-              alt="woman-jacket-3">
+            <img src="images/woman-jacket/woman-jacket-3.png" class="card-img-top p-5 panda-card-img img-fluid"
+              height="" alt="woman-jacket-3">
             <div class="card-body">
               <h1 class="card-title">Woman Leather Jacket</h1>
-              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather days.</p>
+              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather
+                days.</p>
             </div>
             <div class="card-footer penguin-card-footer d-flex justify-content-between align-items-center">
-              <h2>$234</h2>
+              <h1>$234</h1>
               <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
                   alt=""> BUY NOW</button>
             </div>
@@ -137,10 +143,11 @@
             <img src="images/man-jacket/man-jacket-1.png" class="card-img-top p-5 panda-card-img" alt="woman-jacket-1">
             <div class="card-body">
               <h1 class="card-title">Snowboard Jacket Mens</h1>
-              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather days.</p>
+              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather
+                days.</p>
             </div>
             <div class="card-footer penguin-card-footer d-flex justify-content-between">
-              <h2>$234</h2>
+              <h1>$234</h1>
               <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
                   alt=""> BUY NOW</button>
             </div>
@@ -153,10 +160,11 @@
               woman-jacket-2">
             <div class="card-body">
               <h1 class="card-title">Man Leather Jackets</h1>
-              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather days.</p>
+              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather
+                days.</p>
             </div>
             <div class="card-footer penguin-card-footer d-flex justify-content-between">
-              <h2>$234</h2>
+              <h1>$234</h1>
               <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
                   alt=""> BUY NOW</button>
             </div>
@@ -169,10 +177,11 @@
               alt="woman-jacket-3">
             <div class="card-body">
               <h1 class="card-title">Man Casual Jackets</h1>
-              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather days.</p>
+              <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather
+                days.</p>
             </div>
             <div class="card-footer penguin-card-footer d-flex justify-content-between align-items-center">
-              <h2>$234</h2>
+              <h1>$234</h1>
               <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
                   alt=""> BUY NOW</button>
             </div>
@@ -182,19 +191,72 @@
     </section>
     <!--▲ Man Jacket Section end ▲-->
     <!--▼ services Section Start ▼-->
-    <section class="container mt-5">
-      
+    <section class="container mt-5" id="about">
+      <div class="row align-items-center">
+        <div class="col-md-6 container">
+          <div class="d-flex flex-column align-items-center">
+
+            <div class="card shadow penguin-services w-100">
+              <div class="card-body d-flex align-items-center">
+                <div class="p-3">
+                  <img src="images/icons/icon-store.png" alt="" class="img-fluid" height="78px" width="78px">
+                </div>
+                <div>
+                  <h2 class="card-title">Find the Perfect Fit</h2>
+                  <p class="card-text">Everybody is different, which is why we offer styles for every body</p>
+                </div>
+              </div>
+            </div>
+
+            <div class=" mt-3 card shadow penguin-services w-100">
+              <div class="card-body d-flex align-items-center">
+                <div class="p-3">
+                  <img src="images/icons/icon-box.png" alt="" class="img-fluid" height="78px" width="78px">
+                </div>
+                <div>
+                  <h2 class="card-title">Free Exchanges</h2>
+                  <p class="card-text">One of the many reasons you can shop with peace of mind.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="mt-3 card shadow penguin-services w-100">
+              <div class="card-body d-flex align-items-center">
+                <div class="p-3">
+                  <img src="images/icons/icon-call-center.png" alt="" class="img-fluid" height="78px" width="78px">
+                </div>
+                <div>
+                  <h2 class="card-title">Contact Our Seller</h2>
+                  <p class="card-text">They are here to help you. That's quite literally what we pay them for.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-md-6 container">
+          <div>
+            <div class="card-body">
+              <img src="images/showcase.png" alt="showcase" class="img-fluid">
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <!--▲ services Section end ▲-->
 
     <!-- ▼▼▼ contac us Part start ▼▼▼ -->
-    <section class="container text-center shadow rounded p-5 contact-us" id="contactus">
+    <section class="mt-5 container text-center shadow p-5 contact-us" id="contactus">
       <h1>Contact Us</h1>
       <hr>
       <div class="row d-flex align-items-center">
         <div class="col-md-6">
           <img src="images/logo.png" alt="logo" width="291.11px" height="39.27px">
-          <p class="mt-3">The Penguin Fashion story began in 1969 as a single fashion store in the UK. From there, we’ve grown to become a leading fast-fashion brand, with 519 in the UK and Ireland at at 30 March 2019. Our transactional website penguin-fashion.com now ships to around 66 countries world-wide generating around 20% of sales.</p>
+          <p class="mt-3">The Penguin Fashion story began in 1969 as a single fashion store in the UK. From there, we’ve
+            grown to become a leading fast-fashion brand, with 519 in the UK and Ireland at at 30 March 2019. Our
+            transactional website penguin-fashion.com now ships to around 66 countries world-wide generating around 20%
+            of sales.</p>
           <address>
             <p class="address browser,support,triablo">
               <i class="fa fa-map-marker"></i>
@@ -216,7 +278,7 @@
             </div>
             <div class="mb-3">
               <textarea name="message" id="message" cols="30" rows="10" class="form-control"
-              placeholder="Your message here"></textarea>
+                placeholder="Your message here"></textarea>
             </div>
             <button type="submit" class="btn btn-lg buy-now-button">Send</button>
           </form>
