--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,13 +19,14 @@
   <script src="https://kit.fontawesome.com/496f5a0709.js" crossorigin="anonymous"></script>
   <title>Penguin Fashion</title>
 </head>
+
 <body>
   <section style="background: #FFFBF0;" class="pb-5">
     <header class="container">
       <!--▼ Navigation ▼-->
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#" >
+          <a class="navbar-brand" href="#">
             <img src="images/logo.png" alt="logo" width="291.11px" height="39.27px" class="d-inline-block align-top">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -98,7 +100,7 @@
         <div class="col">
           <div class="card h-100 shadow panda-card p-3">
             <img src="images/woman-jacket/woman-jacket-2.png" class="card-img-top p-5 panda-card-img img-fluid"
-              height=" alt=" woman-jacket-2">
+              alt="Ladies Jacket">
             <div class="card-body">
               <h1 class="card-title">Ladies Jacket</h1>
               <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather
@@ -107,7 +109,7 @@
             <div class="card-footer penguin-card-footer d-flex justify-content-between">
               <h1>$234</h1>
               <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
-                  alt=""> BUY NOW</button>
+                  alt="icon-shopping-cart"> BUY NOW</button>
             </div>
           </div>
         </div>
@@ -115,7 +117,7 @@
         <div class="col">
           <div class="card h-100 shadow panda-card p-3">
             <img src="images/woman-jacket/woman-jacket-3.png" class="card-img-top p-5 panda-card-img img-fluid"
-              height="" alt="woman-jacket-3">
+              height="" alt="Woman Leather Jacket">
             <div class="card-body">
               <h1 class="card-title">Woman Leather Jacket</h1>
               <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather
@@ -137,10 +139,11 @@
     <section class="container mt-5">
       <h1 class="big-heading">Man Jacket</h1>
       <div class="row row-cols-1 row-cols-md-3 g-4 align-items-center">
-        <!-- Yellow Coat Jacket -->
+        <!-- Snowboard Jacket Mens -->
         <div class="col">
           <div class="card h-100 shadow panda-card p-3">
-            <img src="images/man-jacket/man-jacket-1.png" class="card-img-top p-5 panda-card-img" alt="woman-jacket-1">
+            <img src="images/man-jacket/man-jacket-1.png" class="card-img-top p-5 panda-card-img"
+              alt="Snowboard Jacket Mens">
             <div class="card-body">
               <h1 class="card-title">Snowboard Jacket Mens</h1>
               <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather
@@ -153,11 +156,11 @@
             </div>
           </div>
         </div>
-        <!-- Ladies Jacket -->
+        <!-- Man Leather Jackets -->
         <div class="col">
           <div class="card h-100 shadow panda-card p-3">
-            <img src="images/man-jacket/man-jacket-2.png" class="card-img-top p-5 panda-card-img" height=" alt="
-              woman-jacket-2">
+            <img src="images/man-jacket/man-jacket-2.png" class="card-img-top p-5 panda-card-img" alt="
+            Man Leather Jackets">
             <div class="card-body">
               <h1 class="card-title">Man Leather Jackets</h1>
               <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather
@@ -166,15 +169,15 @@
             <div class="card-footer penguin-card-footer d-flex justify-content-between">
               <h1>$234</h1>
               <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
-                  alt=""> BUY NOW</button>
+                  alt="icon-shopping-cart"> BUY NOW</button>
             </div>
           </div>
         </div>
-        <!-- Woman Leather Jacket -->
+        <!-- Man Casual Jackets -->
         <div class="col">
           <div class="card h-100 shadow panda-card p-3">
-            <img src="images/man-jacket/man-jacket-3.png" class="card-img-top p-5 panda-card-img" height=""
-              alt="woman-jacket-3">
+            <img src="images/man-jacket/man-jacket-3.png" class="card-img-top p-5 panda-card-img"
+              alt="Man Casual Jackets">
             <div class="card-body">
               <h1 class="card-title">Man Casual Jackets</h1>
               <p class="card-text">Temperature dropped? This super-cosy camel puffer jacket was made for cold-weather
@@ -183,14 +186,16 @@
             <div class="card-footer penguin-card-footer d-flex justify-content-between align-items-center">
               <h1>$234</h1>
               <button type="button" class="btn btn-lg buy-now-button"><img src="images/icons/icon-shopping-cart.png"
-                  alt=""> BUY NOW</button>
+                  alt="icon-shopping-cart"> BUY NOW</button>
             </div>
           </div>
         </div>
       </div>
     </section>
     <!--▲ Man Jacket Section end ▲-->
-    <!--▼ services Section Start ▼-->
+
+
+    <!--▼ Services Section Start ▼-->
     <section class="container mt-5" id="about">
       <div class="row align-items-center">
         <div class="col-md-6 container">
@@ -199,7 +204,8 @@
             <div class="card shadow penguin-services w-100">
               <div class="card-body d-flex align-items-center">
                 <div class="p-3">
-                  <img src="images/icons/icon-store.png" alt="" class="img-fluid" height="78px" width="78px">
+                  <img src="images/icons/icon-store.png" alt="icon-store.png" class="img-fluid" height="78px"
+                    width="78px">
                 </div>
                 <div>
                   <h2 class="card-title">Find the Perfect Fit</h2>
@@ -211,7 +217,7 @@
             <div class=" mt-3 card shadow penguin-services w-100">
               <div class="card-body d-flex align-items-center">
                 <div class="p-3">
-                  <img src="images/icons/icon-box.png" alt="" class="img-fluid" height="78px" width="78px">
+                  <img src="images/icons/icon-box.png" alt="icon-box.png" class="img-fluid" height="78px" width="78px">
                 </div>
                 <div>
                   <h2 class="card-title">Free Exchanges</h2>
@@ -223,7 +229,8 @@
             <div class="mt-3 card shadow penguin-services w-100">
               <div class="card-body d-flex align-items-center">
                 <div class="p-3">
-                  <img src="images/icons/icon-call-center.png" alt="" class="img-fluid" height="78px" width="78px">
+                  <img src="images/icons/icon-call-center.png" alt="icon-call-center" class="img-fluid" height="78px"
+                    width="78px">
                 </div>
                 <div>
                   <h2 class="card-title">Contact Our Seller</h2>
@@ -244,9 +251,9 @@
         </div>
       </div>
     </section>
-    <!--▲ services Section end ▲-->
+    <!--▲ Services Section end ▲-->
 
-    <!-- ▼▼▼ contac us Part start ▼▼▼ -->
+    <!-- ▼▼▼ Contac Us Part start ▼▼▼ -->
     <section class="mt-5 container text-center shadow p-5 contact-us" id="contactus">
       <h1>Contact Us</h1>
       <hr>
@@ -285,23 +292,12 @@
         </div>
       </div>
     </section>
-    <!-- ▲▲▲ contac us Part End ▲▲▲ -->
+    <!-- ▲▲▲ Contac Us Part End ▲▲▲ -->
 
     <footer class="text-center mt-5">
       <p>&copy; Penguin Fashion, All rights reserved Programming Hero</p>
     </footer>
-
   </main>
-
-
-
-
-
-
-
-
-
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
